--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^5.5.6"
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3"
   }
 }
